welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFaceMur()){
reculer()
}else{
	avancer()
}
